--- a/package.json
+++ b/package.json
@@ -10,13 +10,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@cetusprotocol/cetus-sui-clmm-sdk": "^5.2.0",
     "@eslint/config-array": "^0.19.1",
     "@eslint/object-schema": "^2.1.5",
     "@mysten/dapp-kit": "^0.14.46",
+    "@mysten/deepbook-v3": "^0.12.24",
     "@mysten/sui": "^1.19.0",
-    "@mysten/sui.js": "^0.54.1",
     "@tanstack/react-query": "^5.64.0",
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "glob": "^11.0.1",
+    "openai": "^4.78.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.1.1",
