--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "test1",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
@@ -10,6 +12,9 @@
     "preview": "vite preview",
     "start": "node backend/server.js"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "@cetusprotocol/cetus-sui-clmm-sdk": "^5.2.0",
     "@eslint/config-array": "^0.19.1",
@@ -20,9 +25,10 @@
     "@tanstack/react-query": "^5.64.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "glob": "^11.0.1",
-    "openai": "^4.78.1",
+    "openai": "^4.79.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.1.1",
