--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@tanstack/react-query": "^5.64.0",
     "body-parser": "^1.20.3",
     "cors": "^2.8.5",
+    "cross-fetch": "^4.1.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "glob": "^11.0.1",
@@ -33,14 +34,18 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^7.1.1",
-    "rimraf": "^6.0.1"
+    "rimraf": "^6.0.1",
+    "tslib": "^2.8.1",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/node": "^22.10.7",
     "@types/react": "^18.0.36",
     "@types/react-dom": "^18.0.14",
     "@vitejs/plugin-react": "^4.3.4",
     "eslint": "^9.18.0",
     "eslint-plugin-react-hooks": "^5.0.0",
+    "prettier": "^3.4.2",
     "typescript": "^5.1.6",
     "vite": "^6.0.7"
   }
